--- a/client/package.json
+++ b/client/package.json
@@ -6,22 +6,24 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.13.3",
     "axios": "^0.27.2",
+    "caniuse-lite": "^1.0.30001582",
     "mongoose": "^8.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-redux": "^7.2.5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.20"
+    "@types/react-redux": "^7.1.20",
+    "tailwindcss": "^3.4.1"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
