--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,9 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "postcss": "^8",
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
