--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "react-icons": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "postcss": "^8",
