pop up in log in using sweetalert 1

--- a/server copy/.env
+++ b/server copy/.env
@@ -1,1 +1,5 @@
 DATABASE = mongodb+srv://reetnandasana:reet123@cluster0.gfxpkfu.mongodb.net/userdata?retryWrites=true&w=majority
+
+AWS_ACCESS_KEY_ID=AKIA3FLD5NKFSKS42KHZ
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=ap-south-1
