--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,10 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "aws-sdk": "^2.1540.0",
+    "cors": "^2.8.5",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
