--- a/server copy/package.json
+++ b/server copy/package.json
@@ -21,6 +21,9 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "@aws-sdk/client-s3": "^3.495.0",
+    "@aws-sdk/s3-request-presigner": "^3.495.0",
+    "redux-thunk": "^3.1.0"
   }
 }
