--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.13.3",
     "autoprefixer": "^10.4.17",
+    "aws-sdk": "^2.1540.0",
     "axios": "^0.27.2",
     "caniuse-lite": "^1.0.30001582",
+    "cors": "^2.8.5",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.3",
     "postcss": "^8.4.35",
     "react": "^18.1.0",
@@ -20,14 +23,13 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "scss": "^0.2.4",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^2.1.4",
-    "aws-sdk": "^2.1540.0",
-    "cors": "^2.8.5",
-    "scss": "^0.2.4"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
