--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.1",
@@ -29,7 +30,8 @@
     "redux-thunk": "^2.4.0",
     "scss": "^0.2.4",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.20",
