--- a/server copy/package.json
+++ b/server copy/package.json
@@ -24,6 +24,8 @@
     "passport-google-oauth2": "^0.2.0",
     "@aws-sdk/client-s3": "^3.495.0",
     "@aws-sdk/s3-request-presigner": "^3.495.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
+    "react-slick": "^0.30.1"
   }
 }
