--- a/server copy/.env
+++ b/server copy/.env
@@ -4,7 +4,7 @@ AWS_ACCESS_KEY_ID=AKIA3FLD5NKFSKS42KHZ
 AWS_SECRET_ACCESS_KEY=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
 AWS_REGION=ap-south-1
 BASE_URL = http://localhost:8080/
-
+CLIENT_ID= http://localhost:3000/
 HOST = smtp.gmail.com
 SERVICE =gmail
 EMAIL_PORT =587
