--- a/server copy/package.json
+++ b/server copy/package.json
@@ -9,23 +9,27 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "proxy": "http://localhost:3000",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.495.0",
+    "@aws-sdk/s3-request-presigner": "^3.495.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "bcrypt":"^5.1.1",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
-    "crypto":"^1.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
-    "passport": "^0.7.0",
+    "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
-    "@aws-sdk/client-s3": "^3.495.0",
-    "@aws-sdk/s3-request-presigner": "^3.495.0",
+    "passport-google-oauth20": "^2.0.0",
+    "react-slick": "^0.30.1",
     "redux-thunk": "^3.1.0",
-    "slick-carousel": "^1.8.1",
-    "react-slick": "^0.30.1"
+    "request": "^2.88.2",
+    "slick-carousel": "^1.8.1"
   }
 }
